2000-03-14  Kazu Hirata  <kazu@hxi.com>

	* reloc16.c (bfd_coff_reloc16_relax_section): Count the total number
	of shrinks properly, including the last reloc.

2000-03-13  Kazu Hirata  <kazu@hxi.com>

	* coff-h8300.c (h8300_reloc16_extra_cases): Fix the sanity
	check for R_MOVL2.

2000-03-11  Alan Modra  <alan@spri.levels.unisa.edu.au>

	* ieee.c (ieee_archive_p): Return bfd_error_wrong_format on 
	a format mismatch rather than an "error" from bfd_read such as
	bfd_error_file_truncated.

2000-03-10  Geoff Keating  <geoffk@cygnus.com>

	* elf32-mips.c (_bfd_mips_elf_relocate_section): Do proper
	sign-extension and big-endian compensation for
 	R_MIPS_64 even in ld -r.

2000-03-10  Geoffrey Keating  <geoffk@cygnus.com>

	* elf32-mips.c (mips_elf_next_relocation): Rename from
	mips_elf_next_lo16_relocation, and generalize to look
	for any relocation type.
	(elf_mips_howto_table): Make R_MIPS_PC16 pcrel_offset.
	(elf_mips_gnu_rel_hi16): Howto for R_MIPS_GNU_REL_HI16.
	(elf_mips_gnu_rel_lo16): Howto for R_MIPS_GNU_REL_LO16.
	(elf_mips_gnu_rel16_s2): Howto for R_MIPS_GNU_REL16_S2.
	(elf_mips_gnu_pcrel64): Howto for R_MIPS_PC64.
	(elf_mips_gnu_pcrel32): Howto for R_MIPS_PC32.
	(bfd_elf32_bfd_reloc_type_lookup): Add new relocs.
	(mips_rtype_to_howto): Likewise.
	(mips_elf_calculate_relocation): Handle new relocs.
	(_bfd_mips_elf_relocate_section): REL_HI16/REL_LO16 relocs
	are paired.  The addend for R_MIPS_GNU_REL16_S2
	is shifted right two bits.

2000-03-10  Alan Modra  <alan@spri.levels.unisa.edu.au>

	* reloc.c (bfd_perform_relocation): Undo emacs formatting of
	comment, and ensure it doesn't happen again.
	(bfd_install_relocation): Same here.
	(_bfd_relocate_contents): Don't bother assigning unused signmask
	shift result.  Fix typos in comments.
	Remove trailing whitespace throughout file.

2000-03-07  Doug Evans  <dje@casey.transmeta.com>

	* reloc.c (reloc_howto_struct): Fix partial_inplace comment.
	* bfd-in2.h: Rebuild.
